2003-11-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Microtek and Visioneer
	  scanners.

2003-11-04  m. allan noah <anoah at pfeiffer dot edu>
	* doc/descriptions/fujitsu.desc: added model "fi-4110EOX2"

2003-11-04  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/Makefile.in: Linking coolscan now against sanei_thread lib.
	* backend/coolscan.c backend/coolscan.h: Switch backend over to
	  sanei_thread usage, to make it work at least with OS/2.
	* backend/plustek-pp_misc.c backend/plustek-pp_hwdefs.h: Fixed bug
	  in parport setup routine.
	* sanei/sanei_pp.c: Fixed problem in sanei_pp_setmode().
	  Fixed parport mode setting in direct mode.

2003-11-02  Julien Blache <jb@jblache.org>
	* frontend/saned.c: fixed endianness issues in
	check_v{4,6}_in_range(), also fixed portability issues to other
	UNIX platforms due to different representations of IPv6 addresses.

2003-11-02  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/unsupported.desc: Added Plustek OpticSlim 2400.
	* include/sanei/sanei_thread.h: Removed OS/2 porting section.
	* sanei/sanei_pp.c include/sanei/sanei_pp.h:
	  Fixed udelay stuff, documentation update.

2003-11-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in: sanei_pp must be linked if we preload
	  backends.

---- FEATURE FREEZE FOR SANE 1.0.13 ---
-- snapshot 1.0.12-pre2

2003-11-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added PIE Powerslide 3600.
	* NEWS: Updated for 1.0.13.

2003-10-30  Gerhard Jaeger <gerhard@gjaeger.de>
	* sanei/lib/sanei_pp.c: Made sanei_pp_set_datadir work in no ieee1284 mode.
	  Fixed a minor bug in delay calculation.
	* include/sanei/sanei_pp.h: Added some control-port definitions.
	* backend/plustek_pp.c backend/plustek-pp*:
	  Made PS/2 bidirectional mode work.
	* doc/plustek/PLUSTEK-PARPORT.txt: Update.

2003-10-29  Henning Meier-Geinitz <henning@meier-geinitz.de>
